--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -15,3 +15,4 @@ jobs:
       - name: list-files
         run: ls ${{github.workspace}}
       - run: echo "The Jobs status is ${{job.status}}"
+      - run: echo "Output secret code for testing is ${{secrets.TEST}}"
