--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -16,5 +16,10 @@ jobs:
         run: ls ${{github.workspace}}
       - run: echo "The Jobs status is ${{job.status}}"
       - run: echo "Output secret code for testing is ${{secrets.TEST}}"
-      - run: |
-          example-command "$super_secret"
+
+    deploy:
+      runs-on: ubuntu-latest
+      needs: [Explore-Github-Actions]
+      steps:
+        - uses: actions/checkout@v2
+        - run: echo "Deploying 101...."
