run second job regardless of first job status

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -29,6 +29,9 @@ jobs:
     runs-on: ubuntu-latest
     name: Second Job
     needs: first-job
+    if: ${{always()}}
     steps:
       - name: Run Second
         run: echo "Running second"
+
+        
